--- a/malakhov_aleksey_coursework.ipynb
+++ b/malakhov_aleksey_coursework.ipynb
@@ -507,7 +507,7 @@
     "tags": []
    },
    "source": [
-    "Для оценки точности и надежности разметки, вручную провереbv несколько семплов изображений, представленных моделью CLIP."
+    "Для оценки точности и надежности разметки, вручную проверим несколько случайных семплов изображений вместе с разметкой, представленной моделью CLIP."
    ]
   },
   {
@@ -627,7 +627,7 @@
    "id": "6bea53c7",
    "metadata": {},
    "source": [
-    " Результаты визуальной проверки подтверждают, что разметка, полученная моделью CLIP, является качественной и достоверной. Кроме того, класси в нашей задаче являются сбалансированными."
+    " Результаты визуальной проверки подтверждают, что разметка, полученная моделью CLIP, является качественной и достоверной. Кроме того, классы в нашей задаче являются сбалансированными."
    ]
   },
   {
